Fix minor layout issue

--- a/FrontEnd/appointment-system/src/containers/DashboardWelcome/DashboardWelcome.module.css
+++ b/FrontEnd/appointment-system/src/containers/DashboardWelcome/DashboardWelcome.module.css
@@ -27,7 +27,6 @@
   background: linear-gradient(0deg, #1d99a0 0%, #45cdd6 101.86%);
   border-radius: 15px;
   margin: 2% 2%;
-  height: 35vh;
   padding: 5%;
 }
 
@@ -55,7 +54,6 @@
   background-color: #ffffff;
   border-radius: 15px;
   margin: 2% 2%;
-  height: 35vh;
   padding: 5%;
 }
 
